@@ -5,21 +5,24 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
 
+import org.apache.hadoop.conf.Configuration;
+import org.apache.log4j.Logger;
+
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
+
 import datawave.data.normalizer.NormalizationException;
 import datawave.ingest.data.Type;
 import datawave.ingest.data.config.NormalizedContentInterface;
 import datawave.ingest.data.config.NormalizedFieldAndValue;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.log4j.Logger;
 
 public abstract class AbstractNormalizer implements TextNormalizer {
+    private static final String FAILED_TO_NORMALIZE = "Failed to normalize ";
     private static final Logger log = Logger.getLogger(AbstractNormalizer.class);
-    
+
     @Override
     public void setup(Type type, String instance, Configuration config) {}
-    
+
     /**
      * A factory method to create and configure a normalizer given a class name
      *
@@ -42,7 +45,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         Object o;
         try {
-            o = c.newInstance();
+            o = c.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             log.warn("Error creating Normalizer: {}", e);
             throw new IllegalArgumentException("Error creating instance of class " + normalizerClass + ':' + e.getLocalizedMessage(), e);
@@ -55,10 +58,10 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return (TextNormalizer) o;
     }
-    
+
     /**
      * Convert a field value to its normalized form.
-     * 
+     *
      * @param fieldName
      *            the field name
      * @param fieldValue
@@ -68,10 +71,10 @@ public abstract class AbstractNormalizer implements TextNormalizer {
      *             if the value cannot be normalized
      */
     public abstract String convertFieldValue(String fieldName, String fieldValue) throws NormalizationException;
-    
+
     /**
      * Convert a field value regex to work against its normalized form.
-     * 
+     *
      * @param fieldName
      *            the field name
      * @param fieldRegex
@@ -81,7 +84,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
      *             if the value cannot be normalized
      */
     public abstract String convertFieldRegex(String fieldName, String fieldRegex) throws NormalizationException;
-    
+
     /**
      * A convenience routine to get a configuration value
      *
@@ -106,7 +109,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * A convenience routine to get a configuration value
      *
@@ -131,7 +134,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * A convenience routine to get a configuration value
      *
@@ -156,7 +159,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * Get the configuration key prefixes in precedence order: &lt;datatype&gt;.&lt;classname&gt;.&lt;instance&gt; &lt;datatype&gt;.&lt;classname&gt;
      * &lt;datatype&gt;.&lt;instance&gt; &lt;datatype&gt; all.&lt;classname&gt; all
@@ -174,7 +177,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         prefixes.addAll(Arrays.asList(getConfPrefixes("all", null)));
         return prefixes.toArray(new String[prefixes.size()]);
     }
-    
+
     private String[] getConfPrefixes(String type, String instance) {
         StringBuilder builder = new StringBuilder();
         builder.append(type);
@@ -201,17 +204,17 @@ public abstract class AbstractNormalizer implements TextNormalizer {
             return new String[] {str2, str1};
         }
     }
-    
+
     @Override
     public String normalizeFieldValue(String field, String value) throws NormalizationException {
         return convertFieldValue(field, value);
     }
-    
+
     @Override
     public String normalizeFieldRegex(String field, String regex) throws NormalizationException {
         return convertFieldRegex(field, regex);
     }
-    
+
     @Override
     public NormalizedContentInterface normalize(NormalizedContentInterface field) {
         NormalizedFieldAndValue n = new NormalizedFieldAndValue(field);
@@ -221,13 +224,13 @@ public abstract class AbstractNormalizer implements TextNormalizer {
             if (field.getEventFieldName().equals("IP_GEO_FM_COORDINATES") && field.getEventFieldValue().equals("-99.999/-999.999")) {
                 log.warn("Found know bad default value: IP_GEO_FM_COORDINATES=-99.999/-999.999");
             } else {
-                log.error("Failed to normalize " + field.getEventFieldName() + '=' + field.getEventFieldValue(), e);
+                log.error(FAILED_TO_NORMALIZE + field.getEventFieldName() + '=' + field.getEventFieldValue(), e);
             }
             n.setError(e);
         }
         return n;
     }
-    
+
     @Override
     public Multimap<String,NormalizedContentInterface> normalize(Multimap<String,String> fields) {
         Multimap<String,NormalizedContentInterface> results = HashMultimap.create();
@@ -238,7 +241,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
                 try {
                     normalizedContent = normalize(new NormalizedFieldAndValue(field.getKey(), field.getValue()));
                 } catch (Exception e) {
-                    log.error("Failed to normalize " + field.getKey() + '=' + field.getValue(), e);
+                    log.error(FAILED_TO_NORMALIZE + field.getKey() + '=' + field.getValue(), e);
                     normalizedContent = new NormalizedFieldAndValue(field.getKey(), field.getValue());
                     normalizedContent.setError(e);
                 }
@@ -247,7 +250,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return results;
     }
-    
+
     @Override
     public Multimap<String,NormalizedContentInterface> normalizeMap(Multimap<String,NormalizedContentInterface> fields) {
         Multimap<String,NormalizedContentInterface> results = HashMultimap.create();
@@ -258,7 +261,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
                 try {
                     normalizedContent = normalize(field.getValue());
                 } catch (Exception e) {
-                    log.error("Failed to normalize " + field.getValue().getIndexedFieldName() + '=' + field.getValue().getIndexedFieldValue(), e);
+                    log.error(FAILED_TO_NORMALIZE + field.getValue().getIndexedFieldName() + '=' + field.getValue().getIndexedFieldValue(), e);
                     normalizedContent.setError(e);
                 }
                 results.put(normalizedContent.getIndexedFieldName(), normalizedContent);
@@ -266,23 +269,23 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return results;
     }
-    
+
     @Override
     public int hashCode() {
         // Use the concrete TextNormalizer's full name to ensure that we don't get multiple
         // instances of the same class (as Object#hashCode is based on virtual memory location)
         return this.getClass().getName().hashCode();
     }
-    
+
     @Override
     public boolean equals(Object o) {
         if (o == null)
             return false;
         Class<?> otherClz = o.getClass();
-        
+
         // Since TextNormalizers are considered to be stateless,
         // we can treat equality as the same class
         return otherClz.equals(this.getClass());
-        
+
     }
 }
