@@ -1,11 +1,9 @@
 package datawave.webservice.result;
 
-import datawave.webservice.query.Query;
-import datawave.webservice.query.exception.QueryExceptionType;
-import io.protostuff.Input;
-import io.protostuff.Message;
-import io.protostuff.Output;
-import io.protostuff.Schema;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.List;
 
 import javax.xml.bind.annotation.XmlAccessOrder;
 import javax.xml.bind.annotation.XmlAccessType;
@@ -14,93 +12,95 @@ import javax.xml.bind.annotation.XmlAccessorType;
 import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlRootElement;
 import javax.xml.bind.annotation.XmlTransient;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Objects;
+
+import datawave.microservice.query.Query;
+import datawave.webservice.query.exception.QueryExceptionType;
+import io.protostuff.Input;
+import io.protostuff.Message;
+import io.protostuff.Output;
+import io.protostuff.Schema;
 
 @XmlRootElement(name = "QueryImplListResponse")
 @XmlAccessorType(XmlAccessType.NONE)
 @XmlAccessorOrder(XmlAccessOrder.ALPHABETICAL)
 public class QueryImplListResponse extends BaseResponse implements Message<QueryImplListResponse> {
-    
-    private static final long serialVersionUID = 1L;
-    
+
+    private static final long serialVersionUID = -2118945918588194332L;
+
     @XmlElement
     private List<Query> query = null;
     @XmlElement
     private int numResults = 0;
-    
+
     public List<Query> getQuery() {
         return query;
     }
-    
+
     public int getNumResults() {
         return numResults;
     }
-    
+
     public void setQuery(List<Query> query) {
         this.query = query;
         this.numResults = this.query.size();
     }
-    
+
     public void setNumResults(int numResults) {
         this.numResults = numResults;
     }
-    
+
     @Override
     public Schema<QueryImplListResponse> cachedSchema() {
         return SCHEMA;
     }
-    
+
     @XmlTransient
     public static final Schema<QueryImplListResponse> SCHEMA = new Schema<QueryImplListResponse>() {
         public QueryImplListResponse newMessage() {
             return new QueryImplListResponse();
         }
-        
+
         public Class<QueryImplListResponse> typeClass() {
             return QueryImplListResponse.class;
         }
-        
+
         public String messageName() {
             return QueryImplListResponse.class.getSimpleName();
         }
-        
+
         public String messageFullName() {
             return QueryImplListResponse.class.getName();
         }
-        
+
         public boolean isInitialized(QueryImplListResponse message) {
             return true;
         }
-        
+
+        @SuppressWarnings("unchecked")
         public void writeTo(Output output, QueryImplListResponse message) throws IOException {
-            
             Class<? extends Query> clazz = null;
             Schema<Query> schema = null;
             if (message.numResults != 0)
                 output.writeUInt32(1, message.numResults, false);
-            
+
             if (message.query != null) {
-                for (Query query : message.query) {
-                    if (query != null) {
+                for (Query messageQuery : message.query) {
+                    if (messageQuery != null) {
                         if (null == clazz) {
-                            clazz = (Class<? extends Query>) query.getClass();
+                            clazz = messageQuery.getClass();
                             output.writeString(6, clazz.getName(), false);
                         }
-                        if ((null == schema) && (query instanceof Message)) {
-                            Message<Query> m = (Message<Query>) query;
+                        if ((null == schema) && (messageQuery instanceof Message)) {
+                            Message<Query> m = (Message<Query>) messageQuery;
                             schema = m.cachedSchema();
                         }
-                        output.writeObject(2, query, schema, true);
+                        output.writeObject(2, messageQuery, schema, true);
                     }
                 }
             }
-            
+
             output.writeUInt64(3, message.getOperationTimeMS(), false);
-            
+
             List<String> messages = message.getMessages();
             if (messages != null) {
                 for (String msg : messages) {
@@ -108,7 +108,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                         output.writeString(4, msg, true);
                 }
             }
-            
+
             List<QueryExceptionType> exceptions = message.getExceptions();
             if (exceptions != null) {
                 for (QueryExceptionType exception : exceptions) {
@@ -117,7 +117,8 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                 }
             }
         }
-        
+
+        @SuppressWarnings("unchecked")
         public void mergeFrom(Input input, QueryImplListResponse message) throws IOException {
             LinkedList<QueryExceptionType> exceptions = null;
             int number;
@@ -130,7 +131,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                         break;
                     case 2:
                         if (message.query == null) {
-                            message.query = new ArrayList<Query>();
+                            message.query = new ArrayList<>();
                         }
                         if (null == schema) {
                             Class<? extends Query> clazz = null;
@@ -140,7 +141,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                                 throw new RuntimeException("Error finding class: " + queryClass, e);
                             }
                             try {
-                                schema = ((Message) clazz.newInstance()).cachedSchema();
+                                schema = ((Message) clazz.getDeclaredConstructor().newInstance()).cachedSchema();
                             } catch (Exception e) {
                                 throw new RuntimeException("Error creating class: " + queryClass, e);
                             }
@@ -155,7 +156,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                         break;
                     case 5:
                         if (exceptions == null)
-                            exceptions = new LinkedList<QueryExceptionType>();
+                            exceptions = new LinkedList<>();
                         exceptions.add(input.mergeObject(null, QueryExceptionType.getSchema()));
                         break;
                     case 6:
@@ -168,7 +169,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
             if (exceptions != null)
                 message.setExceptions(exceptions);
         }
-        
+
         public String getFieldName(int number) {
             switch (number) {
                 case 1:
@@ -187,13 +188,13 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
                     return null;
             }
         }
-        
+
         public int getFieldNumber(String name) {
             final Integer number = fieldMap.get(name);
-            return number == null ? 0 : number.intValue();
+            return number == null ? 0 : number;
         }
-        
-        final java.util.HashMap<String,Integer> fieldMap = new java.util.HashMap<String,Integer>();
+
+        final java.util.HashMap<String,Integer> fieldMap = new java.util.HashMap<>();
         {
             fieldMap.put("numResults", 1);
             fieldMap.put("query", 2);
@@ -203,7 +204,7 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
             fieldMap.put("queryClass", 6);
         }
     };
-    
+
     @Override
     public boolean equals(Object o) {
         if (null == o) {
@@ -218,14 +219,14 @@ public class QueryImplListResponse extends BaseResponse implements Message<Query
         }
         return false;
     }
-    
+
     @Override
     public int hashCode() {
         int result = query != null ? query.hashCode() : 0;
         result = 31 * result + numResults;
         return result;
     }
-    
+
     @Override
     public String toString() {
         StringBuilder buf = new StringBuilder();
